chore(telegram app): ajustar a performance do app no OCI da Oracle